tests/errors/test-type_inference_error.sac
// This test asserts that accumulated type inference errors are printed as `filename:line Error:`
// SAC_TEST|include common.mk
// SAC_TEST|SAC2C_FLAGS += -check tc -b 6:swr
// SAC_TEST|CALL_SAC2C := $(SAC2C) $(SAC2C_FLAGS)
//
// SAC_TEST|all: <file-name>
// SAC_TEST|<tab>$(CALL_SAC2C) $< 2>&1 | grep -Pi "^.*:\d+ Error:$$" | $(GREP_COMMAND_OUTPUT) "" 2

int main ()
{
  return [0];
}